<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginEnd="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/calendarDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="5dp"
            android:text="@string/lun"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/calendarDayOfWeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingStart="5dp"
            android:paddingEnd="5dp"

            android:text="@string/day_week"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/calendarMonth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|center_horizontal"
            android:text="@string/month_week"
            android:textColor="@android:color/darker_gray"
            android:textSize="18sp" />


    </LinearLayout>

    <TextView
        android:id="@+id/hoyTx"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hoy_week"
        android:textAlignment="center"
        android:textSize="10sp"
        android:textStyle="italic"
        android:visibility="gone"
        tools:ignore="SmallSp" />

</LinearLayout>
