<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register.ObjetivesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/objetives"
            android:layout_width="416dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/pregunta2"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:layout_marginBottom="48dp"
                android:gravity="center"
                android:text="@string/cual_es_tu_principal_objetivo"
                android:textSize="16sp" />

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/objetivesBu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:gravity="center"
                android:orientation="vertical"
                app:singleSelection="true">

                <Button
                    android:id="@+id/perder"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="350dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="16dp"
                    android:drawableEnd="@drawable/chevron_right_fill0_wght400_grad0_opsz24"
                    android:gravity="start|center_vertical"
                    android:tag="1"
                    android:text="@string/perder_peso" />

                <Button
                    android:id="@+id/ganar"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="350dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="16dp"
                    android:drawableEnd="@drawable/chevron_right_fill0_wght400_grad0_opsz24"
                    android:gravity="start|center_vertical"
                    android:tag="2"
                    android:text="@string/ganar_masa_muscular" />

                <Button
                    android:id="@+id/saludable"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="350dp"
                    android:layout_height="64dp"
                    android:layout_marginBottom="16dp"
                    android:drawableEnd="@drawable/chevron_right_fill0_wght400_grad0_opsz24"
                    android:gravity="start|center_vertical"
                    android:tag="3"
                    android:text="@string/comer_m_s_saludable" />
            </com.google.android.material.button.MaterialButtonToggleGroup>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>