<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/ivAvatar"

            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="@string/imagen_comida"
            android:scaleType="centerCrop" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/nombreCard"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:text="@string/comida_no_encontrada"
                android:textAppearance="?attr/textAppearanceTitleMedium"
                android:textSize="34sp" />

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:dividerInsetEnd="16dp"
                app:dividerInsetStart="16dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/ingredientes"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/displayIngredientes"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="49dp"
                    android:layout_height="match_parent"
                    app:icon="@drawable/baseline_arrow_drop_down_24"
                    app:iconPadding="0dp"
                    app:iconSize="36dp" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:dividerInsetEnd="3dp"
                app:dividerInsetStart="3dp" />


            <GridLayout
                android:id="@+id/listaIngredientesCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal|center_vertical"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:orientation="horizontal"
                android:padding="8dp"
                android:rowCount="4"
                android:useDefaultMargins="true"
                android:visibility="gone" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center|center_horizontal|center_vertical"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:text="@string/macros"
                    android:textAppearance="?attr/textAppearanceBodyMedium"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="20sp" />

                <com.google.android.material.button.MaterialButton

                    android:id="@+id/displayMacros"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="49dp"
                    android:layout_height="match_parent"
                    app:icon="@drawable/baseline_arrow_drop_down_24"
                    app:iconPadding="0dp"
                    app:iconSize="36dp" />
            </LinearLayout>

            <com.google.android.material.divider.MaterialDivider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:dividerInsetEnd="3dp"
                app:dividerInsetStart="3dp" />

            <LinearLayout
                android:id="@+id/listaMacrosCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone" />


        </LinearLayout>
    </LinearLayout>


</com.google.android.material.card.MaterialCardView>
