<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primario50"
    tools:context=".register.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="312dp"
            android:layout_height="124dp"
            android:layout_gravity="center"
            android:layout_marginTop="64dp"

            android:contentDescription="logo"
            android:onClick="nextQuestion"
            app:srcCompat="@drawable/optimeal_icon_black" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="298dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:autofillHints=""
                android:background="@drawable/border_input"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp" />

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="7dp"
                android:layout_marginBottom="7dp"
                android:background="@drawable/border_input"
                android:ems="10"
                android:fontFamily="@font/montserrat_regular"
                android:hint="Password"
                android:inputType="textPassword"
                android:paddingStart="8dp" />

            <Button
                android:id="@+id/accederButton"
                style="@style/buttonGreenStyle"
                android:layout_width="match_parent"
                android:layout_height="57dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:drawableEnd="@drawable/baseline_arrow_back_ios_24"
                android:fontFamily="@font/montserrat_regular"
                android:gravity="center"
                android:text="@string/acceder"
                android:textColor="#141414"
                android:textColorLink="#141414"
                android:textSize="16sp"
                android:textStyle="bold"
                app:icon="@drawable/baseline_arrow_forward_24"
                app:iconGravity="textEnd"
                app:iconPadding="8dp"
                app:iconSize="20dp"
                app:iconTint="#000000" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">

            <Button
                android:id="@+id/irRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/background_transparent"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/go_to_register"
                android:textColor="#141414"

                android:textSize="16sp" />

            <Button
                android:id="@+id/SignIn_Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:background="@drawable/background_transparent"
                android:drawableLeft="@drawable/google"
                android:fontFamily="@font/montserrat_regular"
                android:text="Inicia con Google"
                android:textColor="#141414"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>


    </LinearLayout>

</FrameLayout>